<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_main"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <com.boss.view.IconFontTextView
                    android:id="@+id/imployee4_imployeefragment4_setting"
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:text="@string/f"
                    android:textSize="22sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@color/app_main"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/employee4_employeeFragment4_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_launcher" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/employee4_employeeFragment4_nick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="李家森"
                        android:textColor="@color/app_white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/employee4_employeeFragment4_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="管理员"
                        android:textColor="@color/app_white"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/imployee4_imployeefragment4_editData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="编辑简历"
                    android:textColor="@color/app_white"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@color/lightpink"
                    android:visibility="gone" />
            </LinearLayout>

            <com.boss.view.MGridView
                android:id="@+id/imployee4_imployeefragment4_girdview1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dip"
                android:columnWidth="50dip"
                android:gravity="center"
                android:horizontalSpacing="1dip"
                android:minHeight="50dip"
                android:numColumns="2"
                android:paddingTop="5dip"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dip"
                android:visibility="visible" />

            <com.boss.view.MGridView
                android:id="@+id/imployee4_imployeefragment4_girdview2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:columnWidth="50dip"
                android:gravity="center"
                android:horizontalSpacing="1dip"
                android:minHeight="110dip"
                android:numColumns="4"
                android:paddingTop="5dip"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dip"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_create_admin_user"
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dip">

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="18sp" />

                <TextView
                    style="@style/Normal_Linearlayout_leftTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="创建管理员账户"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <include layout="@layout/fengexian" />

            <LinearLayout
                android:id="@+id/layout_statistic"
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:textSize="18sp" />

                <TextView
                    style="@style/Normal_Linearlayout_leftTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="数据统计"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>




            <include layout="@layout/fengexian" />

            <LinearLayout
                android:id="@+id/layout_back_up"
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:textSize="18sp" />

                <TextView
                    style="@style/Normal_Linearlayout_leftTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="备份服务器数据"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <include layout="@layout/fengexian" />

            <LinearLayout
                android:id="@+id/layout_ercode"
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp">

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textSize="18sp" />

                <TextView
                    style="@style/Normal_Linearlayout_leftTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="二维码"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:textSize="18sp" />

                <TextView
                    style="@style/Normal_Linearlayout_leftTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Boss直聘兑换码"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.boss.view.IconFontTextView
                    style="@style/Normal_LinearLayout_Icon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout

                android:id="@+id/company3_in_setting_exit"
                style="@style/Normal_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_more_height"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="退出登录"
                    android:textColor="@color/lightpink" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>